--- a/sf_crime/01_sf_crime_eda.ipynb
+++ b/sf_crime/01_sf_crime_eda.ipynb
@@ -3314,8 +3314,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 참고\n",
-    "**seaborn 시각화**: https://datascienceschool.net/view-notebook/4c2d5ff1caab4b21a708cc662137bc65/"
+    "**참고**:  \n",
+    "[seaborn 시각화](https://datascienceschool.net/view-notebook/4c2d5ff1caab4b21a708cc662137bc65/)"
    ]
   }
  ],
