--- a/sf_crime/01_sf_crime_eda.ipynb
+++ b/sf_crime/01_sf_crime_eda.ipynb
@@ -479,7 +479,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1127a2a90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1181aaa90>"
       ]
      },
      "execution_count": 9,
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1017a7eb8>"
+       "<seaborn.axisgrid.FacetGrid at 0x1180deb70>"
       ]
      },
      "execution_count": 13,
@@ -994,7 +994,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x111d423c8>"
+       "<seaborn.axisgrid.FacetGrid at 0x11774b5c0>"
       ]
      },
      "execution_count": 16,
@@ -1030,7 +1030,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1122a9940>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11765d898>"
       ]
      },
      "execution_count": 17,
@@ -1114,7 +1114,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x112323c88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x117d225f8>"
       ]
      },
      "execution_count": 19,
@@ -1294,7 +1294,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x112fe9828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1189f0c50>"
       ]
      },
      "execution_count": 22,
@@ -1989,7 +1989,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11651da20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c41ddd8>"
       ]
      },
      "execution_count": 26,
@@ -2123,7 +2123,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x116efa5c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c8ff9e8>"
       ]
      },
      "execution_count": 30,
@@ -2163,7 +2163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x116efaef0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c8fff28>"
       ]
      },
      "execution_count": 31,
@@ -2197,7 +2197,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x117123550>"
+       "<seaborn.axisgrid.FacetGrid at 0x11cb2e0b8>"
       ]
      },
      "execution_count": 32,
@@ -2306,7 +2306,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x11383e320>"
+       "<seaborn.axisgrid.FacetGrid at 0x117a13710>"
       ]
      },
      "execution_count": 34,
@@ -3043,7 +3043,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1159da5c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11b03c908>"
       ]
      },
      "execution_count": 37,
@@ -3285,7 +3285,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11704c278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11ca572e8>"
       ]
      },
      "execution_count": 40,
